--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "ejs": "2.4.1",
-    "express": "4.13.3"
+    "cors": "^2.8.1",
+    "express": "^4.14.0",
+    "mongoose": "^4.7.3",
+    "path": "^0.12.7"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/malikasinger1/AgricultureAppBackend.git"
   },
   "keywords": [
     "node",
